# rust-backend-practice-1

./: Cargo.toml  Rocket.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal
migrations/2023-08-22-153329_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
