[package]
name = "rust-backend-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = { version = "1.0.105" }
base64 = "0.21.2"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
default-features = false
features = ["diesel_sqlite_pool"]
